--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --font-cont: "coolvetica";
 }
 
 :root {
@@ -158,6 +159,9 @@ body {
   background-size: cover;
   background-position: center;
 }
+body {
+  overflow-y: scroll; /* Always reserve space for scrollbar */
+}
 
 input:-webkit-autofill {
   background-color: transparent !important;
@@ -231,4 +235,7 @@ input:-webkit-autofill:active {
       rgba(93, 67, 225, 0.2) 12.9%,
       rgba(171, 81, 222, 0.2) 86.02%
     );
+}
+button {
+  cursor: pointer !important;
 }
