product module ui and apis integrated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -239,3 +239,22 @@ input:-webkit-autofill:active {
 button {
   cursor: pointer !important;
 }
+
+.btn-gradient-cancel {
+  background: linear-gradient(
+      119.32deg,
+      rgba(93, 67, 225, 0.2) 12.9%,
+      rgba(171, 81, 222, 0.2) 86.02%
+    ),
+    linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+}
+.btn-gradient-save {
+  background: linear-gradient(119.32deg, #5d43e1 12.9%, #ab51de 86.02%),
+    linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.2) 0%,
+      rgba(255, 255, 255, 0) 22.94%,
+      rgba(255, 255, 255, 0) 72.33%,
+      rgba(255, 255, 255, 0.2) 100%
+    );
+}
